--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "tiny-ipc",
-  "version": "1.0.0",
+  "name": "@sovrin/tiny-ipc",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
+  "files": [
+    "./index.js",
+    "./src"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "publish": "npm publish --access public"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sovrin/tiny-ipc.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/sovrin/tiny-ipc/issues"
   },
-  "homepage": "https://github.com/sovrin/tiny-ipc#readme"
+  "homepage": "https://github.com/sovrin/tiny-ipc#readme",
+  "keywords": [
+    "ipc",
+    "tiny",
+    "client",
+    "server"
+  ]
 }
