--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sovrin/tiny-ipc",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "files": [
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "git+https://github.com/sovrin/tiny-ipc.git"
   },
-  "author": "",
+  "author": "Oleg Kamlowski <n@sovrin.de>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/sovrin/tiny-ipc/issues"
