--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@sovrin/tiny-ipc",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "",
   "main": "index.js",
   "files": [
-    "./index.js",
-    "./src"
+    "index.js",
+    "src",
+    "examples"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
