--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sovrin/tiny-ipc",
-  "version": "2.0.4",
-  "description": "",
+  "version": "2.1.0",
+  "description": "minimal library for communication between nodejs processes",
   "main": "index.js",
   "files": [
     "index.js",
