--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "examples"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "npm publish --access public"
+    "dev": "tsc",
+    "build": "tsc --project tsconfig.prod.json",
+    "watch": "tsc --watch",
+    "test": "mocha test --recursive",
+    "test:watch": "mocha test --watch --recursive",
+    "coverage": "nyc npm run test",
+    "prepare": "npm run build && npm run test"
   },
   "repository": {
     "type": "git",
@@ -27,5 +32,13 @@
     "tiny",
     "client",
     "server"
-  ]
+  ],
+  "devDependencies": {
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.11.8",
+    "mocha": "^8.1.3",
+    "nyc": "^15.1.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
+  }
 }
